tests/snapshots/test_lifecycle__accept_already_accepted_fails.snap
---
source: tests/lifecycle_tests/adr.rs
expression: snapshot
---
$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option A
Added 'Option A' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option B
Added 'Option B' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0] --tick accepted
Marked 'Option A' as accepted
exit: 0

$ govctl adr edit ADR-0001 alternatives[1] --tick rejected
Marked 'Option B' as rejected
exit: 0

$ govctl adr accept ADR-0001
Accepted ADR: ADR-0001
exit: 0

$ govctl adr accept ADR-0001
error[E0303]: Invalid ADR transition: accepted -> accepted. Valid transitions from accepted: superseded (ADR-0001)
exit: 1
