tests/snapshots/test_lifecycle__accept_proposed_adr.snap
---
source: tests/lifecycle_tests/adr.rs
expression: snapshot
---
$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option A
Added 'Option A' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option B
Added 'Option B' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0] --tick accepted
Marked 'Option A' as accepted
exit: 0

$ govctl adr edit ADR-0001 alternatives[1] --tick rejected
Marked 'Option B' as rejected
exit: 0

$ govctl adr list
[
  {
    "id": "ADR-0001",
    "status": "proposed",
    "date": "<DATE>",
    "title": "Test Decision"
  }
]
exit: 0

$ govctl adr accept ADR-0001
Accepted ADR: ADR-0001
exit: 0

$ govctl adr list
[
  {
    "id": "ADR-0001",
    "status": "accepted",
    "date": "<DATE>",
    "title": "Test Decision"
  }
]
exit: 0
