tests/snapshots/test_lifecycle__accept_proposed_adr_requires_selected_option.snap
---
source: tests/test_lifecycle.rs
assertion_line: 394
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr accept ADR-0001
error[E0301]: Accepted ADRs require content.selected_option before acceptance (hint: `govctl adr set ADR-0001 selected_option "..."`) (ADR-0001)
exit: 1
