tests/snapshots/test_lifecycle__accept_rejected_adr_fails.snap
---
source: tests/lifecycle_tests/adr.rs
expression: snapshot
---
$ govctl adr new Bad Decision
Created ADR: gov/adr/ADR-XXXX-bad-decision.toml
exit: 0

$ govctl adr reject ADR-0001
Rejected ADR: ADR-0001
exit: 0

$ govctl adr accept ADR-0001
error[E0303]: Invalid ADR transition: rejected -> accepted. Valid transitions from rejected: none (rejected is terminal) (ADR-0001)
exit: 1
