tests/snapshots/test_lifecycle__advance_draft_to_impl_fails.snap
---
source: tests/lifecycle_tests/rfc_cases/advance.rs
expression: snapshot
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc advance RFC-0001 impl
error[E0104]: Cannot advance to impl while status is draft. Only normative RFCs can enter implementation phases. (RFC-0001)
exit: 1
