tests/snapshots/test_lifecycle__advance_sets_updated_field.snap
---
source: tests/test_lifecycle.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc new Updated RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc finalize RFC-0001 normative
Finalized RFC-0001 to status: normative
exit: 0

$ govctl rfc advance RFC-0001 impl
Advanced RFC-0001 to phase: impl
exit: 0

$ govctl rfc get RFC-0001 updated
<DATE>
exit: 0
