tests/snapshots/test_lifecycle__advance_skip_phase_fails.snap
---
source: tests/lifecycle_tests/rfc_cases/advance.rs
expression: snapshot
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc finalize RFC-0001 normative
Finalized RFC-0001 to status: normative
exit: 0

$ govctl rfc advance RFC-0001 test
error[E0104]: Invalid phase transition: spec -> test. Valid transition from spec: impl (RFC-0001)
exit: 1
